# zynjacku

./: .gitignore  AUTHORS  GNUmakefile  INSTALL  Makefile.am  Makefile_ttl  NEWS  README  acinclude.m4  audiolock.c  audiolock.h  bootstrap  configure.ac  dynparam.c  dynparam.h  dynparam_host_callbacks.c  dynparam_host_callbacks.h  dynparam_internal.h  dynparam_preallocate.c  dynparam_preallocate.h  effect.h  engine.c  engine.h  enum.c  enum.h  flex_ttl.c  flex_ttl.cpp  flex_ttl.h  gen_py_constants.py  gtk2gui.c  gtk2gui.h  hints.c  hints.h  jack_compat.c  log.c  log.h  lv2-gtk2gui.h  lv2-miditype.h  lv2.c  lv2.h  (+43 more)
zynworld/: host.py  lv2.py
